font weight animation added

--- a/Masonry Grid/index.html
+++ b/Masonry Grid/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="box">
         <img src="1.png" alt="" />
-        <h2>Card Heading or Title</h2>
+        <h2>Card Heading or Title 1</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adLorem ipsum dolor sit amet
           consectetur adipisicing elit. Excepturi beatae quisquam ex rem.
@@ -20,7 +20,7 @@
       </div>
       <div class="box">
         <img src="1.png" alt="" />
-        <h2>Card Heading or Title</h2>
+        <h2>Card Heading or Title 2</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. ExLorem ipsum
           dolor sit amet consectetur adipisicing elit. Excepturi beatae quisquam
@@ -40,7 +40,7 @@
       </div>
       <div class="box">
         <img src="1.png" alt="" />
-        <h2>Card Heading or Title</h2>
+        <h2>Card Heading or Title 3</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. ExcLorem
           ipsum dolor sit amet consectetur adLorem ipsum dolor sit amet
@@ -51,7 +51,7 @@
       </div>
       <div class="box">
         <img src="1.png" alt="" />
-        <h2>Card Heading or Title</h2>
+        <h2>Card Heading or Title 4</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
           beatae quisquaLorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -64,7 +64,7 @@
       </div>
       <div class="box">
         <img src="1.png" alt="" />
-        <h2>Card Heading or Title</h2>
+        <h2>Card Heading or Title 5</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
           beatae quisquam ex rem. Delectus ratione sequi quasi autem aperiam.
